--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
 
         <div class="button text-center">
-            <a href=""><button class="btn btn-success w-lg-25 w-xl-25 w-md-25">View more</button></a>
+            <a href="products.html"><button class="btn btn-success w-lg-25 w-xl-25 w-md-25">View more</button></a>
         </div>
 
     </div>
